Completing the method 'calcAssociationRule'
Not quite happy with the method used to reverse the ArrayList but a simple 'Collections.reverse(List)' worked weirdly...